--- a/Coding/playground.ipynb
+++ b/Coding/playground.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
     "    \n",
     "    dic = {\n",
     "        \"DocID\": relation[\"DocID\"],\n",
-    "        \"RelID\": relation[\"ID\"],\n",
+    "        \"RelID\": 0,\n",
     "        \"Sense\": relation[\"Sense\"],\n",
     "        \"Type\" : relation[\"Type\"],\n",
     "        \"Connective\": conn   \n",
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,6 +509,18 @@
    "metadata": {},
    "source": [
     "### Create Files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dev_wang2015_file_path = \"data/submissions/wang2015_dev/output/Wang2015.json\"\n",
+    "dev_wang2015_predicted_list = [json.loads(x) for x in open(dev_wang2015_file_path)]\n",
+    "relations = [create_comparison_format(pred,False) for pred in dev_wang2015_predicted_list]\n",
+    "write_comparison_format_to_file(relations,\"data/project_files/dev_wang2105.json\")"
    ]
   },
   {
@@ -542,7 +554,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = [(\"oslopots\",oslopots_predicted_list),(\"stepanov\",stepanov_predicted_list),(\"ecnucs\",ecnucs_predicted_list)]"
+    "#predictions = [(\"oslopots\",oslopots_predicted_list),(\"stepanov\",stepanov_predicted_list),(\"ecnucs\",ecnucs_predicted_list)]\n",
+    "predictions = [(\"wang2015\",)]"
    ]
   },
   {
