Build Alginer to align Gold Relations to Parser Output

--- a/Coding/Randomizer.ipynb
+++ b/Coding/Randomizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,18 +22,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_parser_rel(relations,file_path):\n",
     "    with open(file_path, 'w') as f:\n",
-    "        json.dump(relations, f)"
+    "        for rel in relations:\n",
+    "            f.write(json.dumps(rel)+\"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_comparison_format1(relation,gold=True):\n",
+    "    conn = dict(relation[\"Connective\"])\n",
+    "    if conn.has_key(\"CharacterSpanList\"):\n",
+    "        del conn[\"CharacterSpanList\"]\n",
+    "    if not conn.has_key(\"RawText\"):\n",
+    "        conn[\"RawText\"] = \"\"\n",
+    "\n",
+    "    dic = {\n",
+    "        \"DocID\": relation[\"DocID\"],\n",
+    "        \"Sense\": relation[\"Sense\"],\n",
+    "        \"Type\" : relation[\"Type\"],\n",
+    "        \"Connective\": conn,\n",
+    "        \"Change\": \"None\"\n",
+    "    }\n",
+    "\n",
+    "    if gold:\n",
+    "        dic[\"Arg1TokenList\"] = [token[2] for token in relation[\"Arg1\"][\"TokenList\"]]\n",
+    "        dic[\"Arg2TokenList\"] = [token[2] for token in relation[\"Arg2\"][\"TokenList\"]]\n",
+    "        dic[\"Parser\"] = \"Gold\"\n",
+    "    else:\n",
+    "        dic[\"Arg1TokenList\"] = relation[\"Arg1\"][\"TokenList\"]\n",
+    "        dic[\"Arg2TokenList\"] = relation[\"Arg2\"][\"TokenList\"]\n",
+    "        dic[\"Parser\"] = \"Pred\"\n",
+    "\n",
+    "    return dic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_compare_attr(relation,gold=True):\n",
+    "    new_rel = relation.copy()\n",
+    "    conn = new_rel[\"Connective\"]\n",
+    "    if not conn.has_key(\"RawText\"):\n",
+    "        new_rel[\"Connective\"][\"RawText\"] = \"\"\n",
+    "        \n",
+    "    new_rel[\"Change\"] = \"None\"\n",
+    "    new_rel[\"Parser\"] = \"Pred\"\n",
+    "    if gold:\n",
+    "        new_rel[\"Parser\"] = \"Gold\"\n",
+    "    \n",
+    "    return new_rel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,35 +95,11 @@
     "    \n",
     "    def __init__(self,parser_path,gold_path):\n",
     "        \n",
-    "        self.parser_rel = [self.create_comparison_format(rel,gold=False) for rel in read_parser_rel(parser_path)]\n",
-    "        self.gold_rel = [self.create_comparison_format(rel) for rel in read_parser_rel(gold_path)]\n",
+    "        self.parser_rel = [add_compare_attr(rel,gold=False) for rel in read_parser_rel(parser_path)]\n",
+    "        self.gold_rel = [add_compare_attr(rel) for rel in read_parser_rel(gold_path)]\n",
     "        self.get_unique_attr(self.gold_rel)\n",
     "        \n",
-    "    def create_comparison_format(self,relation,gold=True):\n",
-    "        conn = dict(relation[\"Connective\"])\n",
-    "        if conn.has_key(\"CharacterSpanList\"):\n",
-    "            del conn[\"CharacterSpanList\"]\n",
-    "        if not conn.has_key(\"RawText\"):\n",
-    "            conn[\"RawText\"] = \"\"\n",
-    "\n",
-    "        dic = {\n",
-    "            \"DocID\": relation[\"DocID\"],\n",
-    "            \"Sense\": relation[\"Sense\"],\n",
-    "            \"Type\" : relation[\"Type\"],\n",
-    "            \"Connective\": conn,\n",
-    "            \"Change\": \"None\"\n",
-    "        }\n",
-    "\n",
-    "        if gold:\n",
-    "            dic[\"Arg1TokenList\"] = [token[2] for token in relation[\"Arg1\"][\"TokenList\"]]\n",
-    "            dic[\"Arg2TokenList\"] = [token[2] for token in relation[\"Arg2\"][\"TokenList\"]]\n",
-    "            dic[\"Parser\"] = \"Gold\"\n",
-    "        else:\n",
-    "            dic[\"Arg1TokenList\"] = relation[\"Arg1\"][\"TokenList\"]\n",
-    "            dic[\"Arg2TokenList\"] = relation[\"Arg2\"][\"TokenList\"]\n",
-    "            dic[\"Parser\"] = \"Pred\"\n",
-    "\n",
-    "        return dic\n",
+    "    \n",
     "    \n",
     "    def get_unique_attr(self,relations):\n",
     "        self.unique_connect = set()\n",
@@ -87,11 +117,10 @@
     "        relation[\"Change\"] = change\n",
     "        \n",
     "        if change == \"Arg1\" or change == \"Arg2\":\n",
-    "            change_key = change + \"TokenList\"\n",
     "            numb_add_tok = random.randint(0,10)\n",
-    "            last_tok = relation[change_key][-1]\n",
+    "            last_tok = relation[change][\"TokenList\"][-1]\n",
     "            add_tok = [i for i in range(last_tok+1,last_tok+numb_add_tok)]\n",
-    "            relation[change_key] += add_tok\n",
+    "            relation[change][\"TokenList\"] += add_tok\n",
     "        elif change == \"Args\":\n",
     "            relation = self.randomize_rel(relation,\"Arg1\")\n",
     "            relation = self.randomize_rel(relation,\"Arg2\")\n",
@@ -115,8 +144,8 @@
     "        return relation\n",
     "    \n",
     "    def change_connective(self,relation):\n",
-    "        arg1 = relation[\"Arg1TokenList\"]\n",
-    "        arg2 = relation[\"Arg2TokenList\"]\n",
+    "        arg1 = relation[\"Arg1\"][\"TokenList\"]\n",
+    "        arg2 = relation[\"Arg2\"][\"TokenList\"]\n",
     "        args = arg1+arg2\n",
     "        relation[\"Connective\"][\"RawText\"] = random.sample(self.unique_connect,1)[0]\n",
     "        relation[\"Connective\"][\"TokenList\"] = [random.randint(min(args),max(args))]\n",
@@ -127,6 +156,7 @@
     "        \n",
     "        select_len = int(len(self.parser_rel)*(random.randrange(80,100,5))/100)\n",
     "        selected_rel = random.sample(self.parser_rel,select_len)[:]\n",
+    "            \n",
     "        \n",
     "        change_len = int(select_len*0.6)\n",
     "        change_rel_ind = random.sample(range(change_len),change_len)\n",
@@ -143,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,10 +199,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "save_parser_rel(randomizer.gold_rel,\"data/gold_standard/blind/gold.json\")"
+   ]
   },
   {
    "cell_type": "code",
