Parser Mapping Ready

--- a/Coding/Randomizer.ipynb
+++ b/Coding/Randomizer.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,38 +67,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_compare_attr(relation,gold=True):\n",
+    "def add_compare_attr(relation,parser_name=\"None\"):\n",
     "    new_rel = relation.copy()\n",
     "    conn = new_rel[\"Connective\"]\n",
     "    if not conn.has_key(\"RawText\"):\n",
     "        new_rel[\"Connective\"][\"RawText\"] = \"\"\n",
     "        \n",
     "    new_rel[\"Change\"] = \"None\"\n",
-    "    new_rel[\"Parser\"] = \"Pred\"\n",
-    "    if gold:\n",
-    "        new_rel[\"Parser\"] = \"Gold\"\n",
+    "    new_rel[\"Parser\"] = parser_name\n",
     "    \n",
     "    return new_rel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Randomizer:\n",
     "    \n",
-    "    def __init__(self,parser_path,gold_path):\n",
+    "    def __init__(self,parser_path,gold_path,parser_name):\n",
     "        \n",
-    "        self.parser_rel = [add_compare_attr(rel,gold=False) for rel in read_parser_rel(parser_path)]\n",
-    "        self.gold_rel = [add_compare_attr(rel) for rel in read_parser_rel(gold_path)]\n",
+    "        self.parser_rel = [add_compare_attr(rel,parser_name=parser_name) for rel in read_parser_rel(parser_path)]\n",
+    "        self.gold_rel = [add_compare_attr(rel,parser_name=\"Gold\") for rel in read_parser_rel(gold_path)]\n",
     "        self.get_unique_attr(self.gold_rel)\n",
-    "        \n",
     "    \n",
     "    \n",
     "    def get_unique_attr(self,relations):\n",
@@ -173,33 +170,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "oslopots_path = \"data/submissions/sense_only/blind/oslopots/output/output.json\"\n",
     "gold_path = \"data/gold_standard/conll16st-en-03-29-16-blind-test/relations.json\"\n",
-    "randomizer = Randomizer(oslopots_path,gold_path)\n",
+    "parser_name = \"oslopots\"\n",
+    "randomizer = Randomizer(oslopots_path,gold_path,parser_name)\n",
     "rels = randomizer.create_randomized_parser_output()\n",
-    "save_parser_rel(rels,\"data/submissions/randomized/oslopots.json\")"
+    "save_parser_rel(rels,\"data/submissions/randomized/\"+parser_name+\".json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "oslopots_path = \"data/submissions/sense_only/blind/nguyenlab/output/output.json\"\n",
     "gold_path = \"data/gold_standard/conll16st-en-03-29-16-blind-test/relations.json\"\n",
-    "randomizer = Randomizer(oslopots_path,gold_path)\n",
+    "parser_name = \"nguyenlab\"\n",
+    "randomizer = Randomizer(oslopots_path,gold_path,parser_name)\n",
     "rels = randomizer.create_randomized_parser_output()\n",
-    "save_parser_rel(rels,\"data/submissions/randomized/nguyenlab.json\")"
+    "save_parser_rel(rels,\"data/submissions/randomized/\"+parser_name+\".json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
