Sense Evaluation Started

--- a/Coding/Parser_Mapping.ipynb
+++ b/Coding/Parser_Mapping.ipynb
@@ -16,12 +16,13 @@
     "import json\n",
     "import numpy as np\n",
     "import conll16st.aligner as aligner\n",
-    "import conll16st.partial_scorer as ps"
+    "import conll16st.partial_scorer as ps\n",
+    "import read_write_files as rw"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +49,7 @@
    "outputs": [],
    "source": [
     "gold_path = \"data/gold_standard/blind/gold.json\"\n",
-    "gold_list = read_json(gold_path)"
+    "gold_list = rw.read_json(gold_path)"
    ]
   },
   {
@@ -67,7 +68,7 @@
    "outputs": [],
    "source": [
     "parse_path = \"data/submissions/randomized/oslopots.json\"\n",
-    "predicted_list = read_json(parse_path)\n",
+    "predicted_list = rw.read_json(parse_path)\n",
     "predicted_lists += [(\"oslopots\",predicted_list)]"
    ]
   },
@@ -78,7 +79,7 @@
    "outputs": [],
    "source": [
     "parse_path = \"data/submissions/randomized/nguyenlab.json\"\n",
-    "predicted_list = read_json(parse_path)\n",
+    "predicted_list = rw.read_json(parse_path)\n",
     "predicted_lists += [(\"nguyenlab\",predicted_list)]"
    ]
   },
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,18 +111,21 @@
     "    total_alignment = {gold[\"ID\"]:{\"gold\":gold,\"parsers\":[]} for gold in gold_rel}\n",
     "    parsers_not_mappable = []\n",
     "    \n",
+    "    parser_names = [name for name,parser in parsers]\n",
+    "    \n",
     "    for name,parser_relations in parsers:\n",
     "        arg1_alignment, arg2_alignment, relation_alignment = aligner.align_relations(\n",
     "            gold_rel, \n",
     "            parser_relations, \n",
     "            0.7)\n",
-    "        \n",
+    "         \n",
     "        relation_alignment = change_sets_to_list(relation_alignment)\n",
     "        for gold_align,pred_align in relation_alignment:\n",
     "            if gold_align == None:\n",
     "                parsers_not_mappable += [pred_align]\n",
     "            else:\n",
     "                total_alignment[gold_align[\"ID\"]][\"parsers\"] += [pred_align]\n",
+    "                total_alignment[gold_align[\"ID\"]][\"parser_names\"] = parser_names\n",
     "     \n",
     "    return total_alignment,parsers_not_mappable\n",
     "        "
@@ -129,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
