--- a/Coding/Randomizer.ipynb
+++ b/Coding/Randomizer.ipynb
@@ -170,16 +170,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "oslopots_path = \"data/submissions/sense_only/blind/oslopots/output/output.json\"\n",
     "gold_path = \"data/gold_standard/conll16st-en-03-29-16-blind-test/relations.json\"\n",
-    "parser_name = \"oslopots\"\n",
-    "randomizer = Randomizer(oslopots_path,gold_path,parser_name)\n",
-    "rels = randomizer.create_randomized_parser_output()\n",
-    "save_parser_rel(rels,\"data/submissions/randomized/\"+parser_name+\".json\")"
+    "\n",
+    "oslopots_path = \"data/submissions/sense_only/blind/oslopots/output/output.json\"\n",
+    "nguyenlab_path = \"data/submissions/sense_only/blind/nguyenlab/output/output.json\"\n",
+    "steven_path = \"data/submissions/sense_only/blind/steven/output/output.json\"\n",
+    "\n",
+    "prediction_paths = [(\"oslopots\",oslopots_path),(\"nguyenlab\",nguyenlab_path),(\"steven\",steven_path)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for name,pars_path in prediction_paths: \n",
+    "    randomizer = Randomizer(pars_path,gold_path,name)\n",
+    "    rels = randomizer.create_randomized_parser_output()\n",
+    "    save_parser_rel(rels,\"data/submissions/randomized/\"+name+\".json\")"
    ]
   },
   {
@@ -188,13 +201,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "oslopots_path = \"data/submissions/sense_only/blind/nguyenlab/output/output.json\"\n",
-    "gold_path = \"data/gold_standard/conll16st-en-03-29-16-blind-test/relations.json\"\n",
-    "parser_name = \"nguyenlab\"\n",
-    "randomizer = Randomizer(oslopots_path,gold_path,parser_name)\n",
+    "\n",
+    "parser_name = \n",
+    "randomizer = Randomizer(nguyenlab_path,gold_path,parser_name)\n",
     "rels = randomizer.create_randomized_parser_output()\n",
     "save_parser_rel(rels,\"data/submissions/randomized/\"+parser_name+\".json\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
