Sense Model Creation finished for one parser

--- a/Coding/Sense Validation.ipynb
+++ b/Coding/Sense Validation.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from read_write_files import read_json\n",
+    "from read_write_files import read_json, save_json\n",
     "from collections import Counter\n",
     "import itertools\n",
     "import pandas as pd"
@@ -928,38 +928,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_sense_lists(relations):\n",
+    "    gold_senses = []\n",
+    "    parser_senses = []\n",
+    "    parser_names = relations[0][\"parser_names\"]\n",
+    "    \n",
     "    for rel in relations:\n",
-    "        gold_senses = [rel[\"Gold\"][\"Sense\"][0] for rel in relations]\n",
+    "        gold_senses += [rel[\"gold\"][\"Sense\"][0]]\n",
+    "        \n",
+    "        parser_pred = []\n",
+    "        for parser in rel[\"parsers\"]:\n",
+    "            if parser == None:\n",
+    "                parser_pred += [\"None\"]\n",
+    "            else:\n",
+    "                parser_pred += [parser[\"Sense\"][0]]\n",
+    "        \n",
+    "        parser_senses += tuple([parser_pred])\n",
+    "    parser_senses_zip = list(zip(*parser_senses))\n",
+    "    \n",
+    "    return gold_senses,parser_senses_zip,parser_names\n",
+    "        \n",
+    "            \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calc_prob_measure(gold_total,pred_total,tp):\n",
+    "    prec = 0\n",
+    "    if pred_total != 0:\n",
+    "        prec = tp/pred_total\n",
+    "        \n",
+    "    rec = 0\n",
+    "    if gold_total != 0:\n",
+    "        rec = tp/gold_total\n",
     "    \n",
-    "    prec = tp/pred_total\n",
-    "    rec = tp/gold_total\n",
-    "    f1 = ((prec+rec)/(prec*rec))\n",
+    "    f1 = 0\n",
+    "    if prec != 0 and rec != 0:\n",
+    "        f1 = ((prec*rec)/(prec+rec))\n",
     "    \n",
     "    return prec,rec,f1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parser_sense_model(gold_senses,pred_senses,add_parser):\n",
+    "def create_one_parser_model(gold_senses,pred_senses):\n",
     "    sense_model = dict()\n",
     "    \n",
     "    sense_set = set(gold_senses)\n",
@@ -981,6 +1006,33 @@
     "    return sense_model\n",
     "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gold_senses,parser_senses,parser_names = get_sense_lists(total_alignments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = []\n",
+    "model_path = \"data/project_files/sense_model.json\"\n",
+    "for parser_name,parser_pred in zip(*[parser_names,parser_senses]):\n",
+    "    tmp_model = create_one_parser_model(gold_senses,parser_pred)\n",
+    "    model += [{\n",
+    "        \"parser\":parser_name,\n",
+    "        \"sense_pred\": tmp_model\n",
+    "    }]\n",
+    "    \n",
+    "save_json(model,model_path)"
    ]
   },
   {
