Changed Names of Notebookes and add training files

--- a/Coding/Parser_Mapping.ipynb
+++ b/Coding/Parser_Mapping.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Parser Gold Mapping"
+    "# Parser Gold Mapping\n",
+    "\n",
+    "This notebook maps all relations to each other taking into account that there are some that where not predicted."
    ]
   },
   {
@@ -18,58 +20,6 @@
     "import conll16st.aligner as aligner\n",
     "import conll16st.partial_scorer as ps\n",
     "import read_write_files as rw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 181,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gold_path = \"data/gold_standard/blind/gold.json\"\n",
-    "gold_list = rw.read_json(gold_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 182,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted_lists = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 183,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parse_path = \"data/submissions/randomized/oslopots.json\"\n",
-    "predicted_list = rw.read_json(parse_path)\n",
-    "predicted_lists += [(\"oslopots\",predicted_list)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 184,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parse_path = \"data/submissions/randomized/nguyenlab.json\"\n",
-    "predicted_list = rw.read_json(parse_path)\n",
-    "predicted_lists += [(\"nguyenlab\",predicted_list)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 185,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parse_path = \"data/submissions/randomized/steven.json\"\n",
-    "predicted_list = rw.read_json(parse_path)\n",
-    "predicted_lists += [(\"steven\",predicted_list)]\n"
    ]
   },
   {
@@ -121,8 +71,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training Set Mapping"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gold_path = \"data/gold_standard/blind/gold.json\"\n",
+    "gold_list = rw.read_json(gold_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parsers = [\n",
+    "    (\"oslopots\",\"data/submissions/randomized/blind/oslopots.json\"),\n",
+    "    (\"nguyenlab\",\"data/submissions/randomized/blind/nguyenlab.json\"),\n",
+    "    (\"steven\",\"data/submissions/randomized/blind/steven.json\")\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted_lists = []\n",
+    "\n",
+    "for name,path in parsers:\n",
+    "    predicted_list = rw.read_json(path)\n",
+    "    predicted_lists += [(name,predicted_list)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,12 +126,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_json(total_alignment.values(),\"data/project_files/total_alignment.json\")\n",
-    "save_json(not_mappables,\"data/project_files/not_mappable.json\")"
+    "save_json(total_alignment.values(),\"data/project_files/blind/total_alignment.json\")\n",
+    "save_json(not_mappables,\"data/project_files/blind/not_mappable.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test Set Mapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gold_path = \"data/gold_standard/dev/gold.json\"\n",
+    "gold_list = rw.read_json(gold_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parsers = [\n",
+    "    (\"oslopots\",\"data/submissions/randomized/dev/oslopots.json\"),\n",
+    "    (\"nguyenlab\",\"data/submissions/randomized/dev/nguyenlab.json\"),\n",
+    "    (\"steven\",\"data/submissions/randomized/dev/steven.json\")\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted_lists = []\n",
+    "\n",
+    "for name,path in parsers:\n",
+    "    predicted_list = rw.read_json(path)\n",
+    "    predicted_lists += [(name,predicted_list)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_alignment,not_mappables = align_parsers_to_gold(\n",
+    "    gold_rel=gold_list,\n",
+    "    parsers=predicted_lists)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_json(total_alignment.values(),\"data/project_files/dev/total_alignment.json\")\n",
+    "save_json(not_mappables,\"data/project_files/dev/not_mappable.json\")"
    ]
   },
   {
