--- a/Coding/DataPreprocessor.ipynb
+++ b/Coding/DataPreprocessor.ipynb
@@ -263,16 +263,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gold_test_path = \"data/gold_standard/en.dev/relations.json\""
+    "gold_test_path = \"data/gold_standard/conll16st-en-03-29-16-dev/relations.json\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,19 +285,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
-    "preprocessor = Preprocessor(parsers,gold_path)\n",
+    "preprocessor = Preprocessor(parsers,gold_test_path)\n",
     "for name,pars_path in parsers: \n",
     "    rels = preprocessor.create_randomized_parser_output(name)\n",
-    "    save_parser_rel(rels,\"data/submissions/randomized/\"+name+\".json\")"
+    "    save_parser_rel(rels,\"data/submissions/randomized/dev/\"+name+\".json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
