--- a/Coding/00_DataPreprocessor.ipynb
+++ b/Coding/00_DataPreprocessor.ipynb
@@ -208,100 +208,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save randomized changed Predictions"
+    "## Save (randomized) Training Sets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gold_path = \"data/gold_standard/conll16st-en-03-29-16-blind-test/relations.json\""
+    "gold_path = \"data/gold_standard/test/relations.json\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
     "parsers = [\n",
     "    (\"oslopots\",\"data/submissions/sense_only/blind/oslopots/output/output.json\"),\n",
-    "    (\"nguyenlab\",\"data/submissions/sense_only/blind/nguyenlab/output/output.json\"),\n",
+    "    (\"ecnucs\",\"data/submissions/sense_only/blind/ecnucs/output/output.json\"),\n",
     "    (\"steven\",\"data/submissions/sense_only/blind/steven/output/output.json\")\n",
     "]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
     "preprocessor = Preprocessor(parsers,gold_path)\n",
     "for name,pars_path in parsers: \n",
     "    rels = preprocessor.create_randomized_parser_output(name)\n",
-    "    save_parser_rel(rels,\"data/submissions/randomized/\"+name+\".json\")"
+    "    save_parser_rel(rels,\"data/submissions/randomized/test/\"+name+\".json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_parser_rel(preprocessor.gold_rel,\"data/gold_standard/blind/gold.json\")"
+    "save_parser_rel(preprocessor.gold_rel,\"data/gold_standard/test/gold.json\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save Test Files"
+    "## Save Test Sets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gold_test_path = \"data/gold_standard/conll16st-en-03-29-16-dev/relations.json\""
+    "gold_test_path = \"data/gold_standard/blind/relations.json\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
     "parsers = [\n",
-    "    (\"oslopots\",\"data/submissions/sense_only/dev/oslopots/output/output.json\"),\n",
-    "    (\"nguyenlab\",\"data/submissions/sense_only/dev/nguyenlab/output/output.json\"),\n",
-    "    (\"steven\",\"data/submissions/sense_only/dev/steven/output/output.json\")\n",
+    "    (\"oslopots\",\"data/submissions/sense_only/blind/oslopots/output/output.json\"),\n",
+    "    (\"ecnucs\",\"data/submissions/sense_only/blind/ecnucs/output/output.json\"),\n",
+    "    (\"steven\",\"data/submissions/sense_only/blind/steven/output/output.json\")\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
     "preprocessor = Preprocessor(parsers,gold_test_path)\n",
     "for name,pars_path in parsers: \n",
     "    rels = preprocessor.create_randomized_parser_output(name)\n",
-    "    save_parser_rel(rels,\"data/submissions/randomized/dev/\"+name+\".json\")"
+    "    save_parser_rel(rels,\"data/submissions/randomized/blind/\"+name+\".json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_json(preprocessor.gold_rel,\"data/gold_standard/dev/gold.json\")"
+    "save_json(preprocessor.gold_rel,\"data/gold_standard/blind/gold.json\")"
    ]
   },
   {
