--- a/Coding/02_SenseModel.ipynb
+++ b/Coding/02_SenseModel.ipynb
@@ -1014,27 +1014,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "while max_split > 1:\n",
-    "        new_senses = set()\n",
-    "        for splitted_sense in sense_split:\n",
-    "            if len(splitted_sense) == max_split:\n",
-    "                new_senses.update([\".\".join(splitted_sense[:max_split-1])])\n",
-    "                sense_model[\".\".join(splitted_sense[:max_split-1])] = [\n",
-    "                    sense_model[\".\".join(splitted_sense[:max_split])][\"f1\"]\n",
-    "                ]\n",
-    "\n",
-    "                for key in new_senses:\n",
-    "                    print(key,sense_model[key])\n",
-    "                    sense_model[key] = np.mean(sense_model[key])\n",
-    "        max_split -= 1"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 353,
    "metadata": {},
    "outputs": [],
@@ -1098,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,8 +1095,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sense Model Statistics"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
@@ -1456,7 +1442,7 @@
        "15  0.253823  "
       ]
      },
-     "execution_count": 357,
+     "execution_count": 359,
      "metadata": {},
      "output_type": "execute_result"
     }
