--- a/Paper/projectreport.bib
+++ b/Paper/projectreport.bib
@@ -1,3 +1,14 @@
+@article{mann1988rhetorical,
+  title={Rhetorical structure theory: Toward a functional theory of text organization},
+  author={Mann, William C and Thompson, Sandra A},
+  journal={Text-Interdisciplinary Journal for the Study of Discourse},
+  volume={8},
+  number={3},
+  pages={243--281},
+  year={1988},
+  publisher={Walter de Gruyter, Berlin/New York}
+}
+
 @article{xue2016conll,
   title={Conll 2016 shared task on multilingual shallow discourse parsing},
   author={Xue, Nianwen and Ng, Hwee Tou and Pradhan, Sameer and Rutherford, Attapol and Webber, Bonnie and Wang, Chuan and Wang, Hongmin},
